@@ -3896,6 +3896,8 @@
 
 2007-09-30  David Kastrup  <dak@gnu.org>
 
+	* server.el (server-process-filter): Use `command-line-args-left'
+
 	* startup.el (argv): Alias for `command-line-args-left' to use as
 	`(pop argv)' inside of --eval command sequences.  Allows for
 	passing shell commands into Emacs verbatim without need for Lisp
